# policies/rust/now-policy-api/openapi/now-policy-api.yaml
@@ -543,6 +543,20 @@ components:
       - Winget
       - PowerShell
       - PowerShell7
+      - Apt
+      - Bun
+      - Cargo
+      - Chocolatey
+      - Dnf
+      - Dotnet
+      - Flatpak
+      - Homebrew
+      - Npm
+      - Pacman
+      - Pip
+      - Scoop
+      - Snap
+      - Vcpkg
     Operation:
       description: Package operation type.
       type: string
